[package]
name = "poll_control_plus"
version = "0.1.0"
author = "Noah Perry"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.21"
# reqwest = "0.11.10"
# tokio = "1.17.0"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime